// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HeaderBackIcon Custom props 1`] = `
<View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={20}
    bbWidth={20}
    color={4278255615}
    focusable={false}
    height={20}
    id="prefix__Calque_1"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    tintColor={4278255615}
    vbHeight={20}
    vbWidth={20}
    width={20}
    x={0}
    xmlSpace="preserve"
    y={0}
  >
    <RNSVGGroup>
      <RNSVGGroup
        name="prefix__Page-1"
      >
        <RNSVGPath
          d="M13.9 0l2.9 3-6.9 7 6.9 7-2.9 3L4 10z"
          fill={4278255615}
          name="prefix__arrow_left"
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Storyshots HeaderBackIcon Default 1`] = `
<View>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={16}
    bbWidth={16}
    color={4283723386}
    focusable={false}
    height={16}
    id="prefix__Calque_1"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
    tintColor={4283723386}
    vbHeight={20}
    vbWidth={20}
    width={16}
    x={0}
    xmlSpace="preserve"
    y={0}
  >
    <RNSVGGroup>
      <RNSVGGroup
        name="prefix__Page-1"
      >
        <RNSVGPath
          d="M13.9 0l2.9 3-6.9 7 6.9 7-2.9 3L4 10z"
          fill={4283723386}
          name="prefix__arrow_left"
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
